# rust-rust-playground

./: Cargo.toml  README.md
config/: env.toml
resources/html-templates/: execute.html
src/: configuration.rs  handlers.rs  lib.rs  main.rs
